# ama_ws25

./: .envrc  .gitignore  .pre-commit-config.yaml  .treefmt.toml  Makefile  cleanjupyter.py  flake.nix  index.html  requirements.txt  search.json
.data/: siebenkampf.csv
.github/workflows/: quarto-build.yml
_data/: HDR25_Composite_indices_complete_time_series.csv  milk.csv
ama_tlbx/: README.md  pyproject.toml
ama_tlbx/ama_tlbx/: __init__.py
ama_tlbx/ama_tlbx/analysis/: __init__.py  base_analyser.py  column_concat.py  correlation_analyzer.py  hierachical_clustering.py  model_registry.py  model_selection.py  ols_helper.py  outlier_detector.py  pca_analyzer.py  pca_dim_reduction.py
ama_tlbx/ama_tlbx/data/: __init__.py  base_columns.py  base_dataset.py  life_expectancy_columns.py  life_expectancy_dataset.py  siebenkampf_columns.py  undp_hdr_columns.py  undp_hdr_dataset.py  utils.py  views.py
ama_tlbx/ama_tlbx/plotting/: __init__.py  clustering_plots.py  correlation_plots.py  dataset_plots.py  pca_dim_reduction_plots.py  pca_plots.py  regression_plots.py
ama_tlbx/ama_tlbx/utils/: __init__.py  paths.py  plotting_config.py
ama_tlbx/scripts/: get_context.py
ama_tlbx/src/ama_tlbx/: __init__.py
ama_tlbx/src/ama_tlbx/analysis/: __init__.py  correlation_analyzer.py  outlier_detector.py  pca_analyzer.py
ama_tlbx/src/ama_tlbx/data_handling/: __init__.py  base_columns.py  base_dataset.py  column_definitions.py  life_expectancy_columns.py  life_expectancy_dataset.py  siebenkampf_columns.py  views.py
ama_tlbx/src/ama_tlbx/plotting/: __init__ copy.py  __init__.py  correlation_plots.py  dataset_plots.py  pca_plots.py
ama_tlbx/tests/: conftest.py  test_column_concat_and_clustering.py  test_column_definitions.py  test_correlation_analyzer.py  test_life_expectancy_dataset.py  test_outlier_detector.py  test_pca_analyzer.py  test_pca_dim_reduction.py  test_plotting_real_data.py  test_regression_diagnostics_real_data.py  test_regression_helpers_real_data.py  test_utils_paths.py  test_views.py
chapters/: 1_introduction.html  2_preprocessing.html  3_pca.html  4_clustering.html
docs/: _quarto.yml  api.quarto_ipynb  correlation-analysis.qmd  index.qmd  outlier-detection.qmd  theory.qmd
docs/scripts/: generate_pdoc.sh
docs/theory/: data-preprocessing.qmd  pca.qmd
nix/modules/: ama.nix  default.nix
nix/pkgs/: ama_tlbx.nix
notebooks/: Jens-notebooktest.ipynb  __init__.py  demo_analysis_workflow.ipynb
notebooks/jens/: __init__.py  data_analyzer.py  data_loader.py  data_visualiser.py  project_work.ipynb
notebooks/labs/: 04_PCA_USArrests.ipynb  mda_lab01.ipynb  mda_lab02_pca.ipynb
notebooks/pmenhart/: milk_clustering.ipynb  modellwahl.ipynb  siebenkampf_clustering.ipynb  siebenkampf_pca.ipynb
notebooks/project/: 06_linear_regression.ipynb  06_linear_regression2.ipynb  correlation_analysis.ipynb  life_exp_proj_01.ipynb  pca_dim_reduction.ipynb  pca_exploration.ipynb  year_selection_analysis.ipynb
streamlit/: app.py  milk.py
submission/: .gitignore  _quarto.yml  index.qmd  references.bib
submission/_freeze/chapters/5_regression_supervised_pca/execute-results/: html.json
submission/chapters/: 1_introduction.qmd  2_investigate_hdi.qmd  2_outlier_detection.qmd  2_preproc_year_selection.qmd  2_preprocessing.qmd  3_correlation.qmd  3_pca.qmd  4_clustering.qmd  5_regression.qmd  5_regression_2.qmd  5_regression_supervised_pca.qmd  6_model_selection.qmd
submission/chapters/.jupyter_cache/: global.db
submission/chapters/.jupyter_cache/executed/9ee17725f971403ec3a6b94bcd7e64f9/: base.ipynb
submission/chapters/.jupyter_cache/executed/bab17057c03d5241e06f2e4ca09c7fac/: base.ipynb
submission/figures/: ama_preprocessing_flow.mmd
